--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <head>
-   <title>Lowes Coupons</title>
+   <title>Coupons</title>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-15878927-9', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </head>
 <body style="text-align:center;">
    <h2>$15 Off $50</h2>
