Display total coupons generated

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,5 +26,6 @@
    <h2>10% Off</h2>
    {% for coupon in ten_percent_off_coupons %}
        <h1>{{coupon}}</h1>
-   {% endfor %} 
+   {% endfor %}
+   <span style="color:white">{{total_coupons_generated}} total coupons generated</span>
 </body>
