Increase font size

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,10 @@
       <style>
          .glyphicon{cursor:pointer; color:red;}
          .glyphicon-ok.activated{color:green;}
+         body{font-size: 20pt;text-align:center;}
       </style>
    </head>
-   <body style="text-align:center;">
+   <body>
       <h2>$15 Off $50</h2>
       {% for coupon in fifteen_off_50_coupons %}
          <h1>
