--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,8 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
       <style>
-         .coupon-actions .glyphicon.glyphicon-remove-circle{color:red;}
+         .coupon-actions{margin-left:20pt;}
+         .coupon-actions .glyphicon.glyphicon-remove-circle{color:red;margin-right:10pt;}
          .coupon-actions.active .glyphicon{cursor:pointer;}
          .glyphicon-ok.activated{color:green;}
          body{font-size: 20pt;text-align:center;}
