Adjust icon positions

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
       <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
       <style>
          .coupon-actions{margin-left:20pt;}
+         .coupon-actions .glyphicon{top:5pt;}
          .coupon-actions .glyphicon.glyphicon-remove-circle{color:red;margin-right:10pt;}
          .coupon-actions.active .glyphicon{cursor:pointer;}
          .glyphicon-ok.activated{color:green;}
