--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
       <style>
+         h1{height:85pt;}
          .coupon-actions{margin-left:20pt;}
          .coupon-actions .glyphicon{top:5pt;}
          .coupon-actions .glyphicon.glyphicon-remove-circle{color:red;margin-right:10pt;}
