Get Coupon instead of Generate

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
    <body>
       <h2>$15 Off $50</h2>
       <h1 data-couponType="1">
-         <span title="Generate Coupon Code" class="coupon generate button">Generate</span>
+         <span title="Generate Coupon Code" class="coupon generate button">Get Coupon</span>
          <span class="coupon-actions" hidden>
             <span title="Mark Coupon Bad" class="mark_bad glyphicon glyphicon-remove-circle"></span>
             <span title="Mark Coupon Used" class="mark_used glyphicon glyphicon-ok"></span>
@@ -48,7 +48,7 @@
       </h1>
       <h2>$50 Off $250</h2>
       <h1 data-couponType="2">
-         <span title="Generate Coupon Code" class="coupon generate button">Generate</span>
+         <span title="Generate Coupon Code" class="coupon generate button">Get Coupon</span>
          <span class="coupon-actions" hidden>
             <span title="Mark Coupon Bad" class="mark_bad glyphicon glyphicon-remove-circle"></span>
             <span title="Mark Coupon Used" class="mark_used glyphicon glyphicon-ok"></span>
@@ -56,7 +56,7 @@
       </h1>
       <h2>10% Off</h2>
       <h1 data-couponType="0">
-         <span title="Generate Coupon Code" class="coupon generate button">Generate</span>
+         <span title="Generate Coupon Code" class="coupon generate button">Get Coupon</span>
          <span class="coupon-actions" hidden>
             <span title="Mark Coupon Bad" class="mark_bad glyphicon glyphicon-remove-circle"></span>
             <span title="Mark Coupon Used" class="mark_used glyphicon glyphicon-ok"></span>
