--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
       </h1>
       <div id="stats">
          Total users: {{stats['total_users']}}<br/>
-         Total generated coupons: {{stats['total_user_generated_coupons']}}<br/>
+         Total generated coupons: {{stats['total_generated_coupons']}}<br/>
          Average user generated coupons: {{stats['average_generated_coupons']}}<br/>
          Total coupons marked bad: {{stats['total_bad_coupons']}}<br/>
          Total coupons marked used: {{stats['total_used_coupons']}}<br/>
